[project]
name = "grapy"
version = "0.1.0"
description = "A flat, SQLite-native knowledge graph with YAML frontmatter and wikilinks"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tanmay Gupta", email = "tg1482@stern.nyu.edu" }
]
requires-python = ">=3.10"
dependencies = []
keywords = ["knowledge-graph", "sqlite", "wikilinks", "frontmatter", "agents", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/tg1482/grapy"
Repository = "https://github.com/tg1482/grapy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grapy"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=7.2.0",
    "nbclient>=0.10.4",
    "pytest>=8.0.0",
    "twine>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
